--- a/wisdom.html
+++ b/wisdom.html
@@ -152,6 +152,49 @@
                         <p>Learn how cover crops protect and enrich soil between growing seasons.</p>
                         <a href="https://www.youtube.com/watch?v=vG1H9Sg4lBM" target="_blank" class="watch-on-youtube">Watch on YouTube →</a>
                     </div>
+                                    <div class="video-card">
+                    <div class="video-wrapper" data-video-id="SjDoCbK1gGY">
+                        <img src="https://img.youtube.com/vi/SjDoCbK1gGY/hqdefault.jpg" alt="Soil Science Fundamentals">
+                    </div>
+                    <div class="video-info">
+                        <h3>Soil Science Fundamentals</h3>
+                        <p>Comprehensive overview of soil science principles and their practical applications.</p>
+                        <a href="https://www.youtube.com/watch?v=SjDoCbK1gGY" target="_blank" class="watch-on-youtube">Watch on YouTube →</a>
+                    </div>
+                </div>
+
+                <div class="video-card">
+                    <div class="video-wrapper" data-video-id="BArbrfmsxeQ">
+                        <img src="https://img.youtube.com/vi/BArbrfmsxeQ/maxresdefault.jpg" alt="Soil Management Techniques">
+                    </div>
+                    <div class="video-info">
+                        <h3>Soil Management Techniques</h3>
+                        <p>Advanced techniques for managing and improving soil quality in various conditions.</p>
+                        <a href="https://www.youtube.com/watch?v=BArbrfmsxeQ" target="_blank" class="watch-on-youtube">Watch on YouTube →</a>
+                    </div>
+                </div>
+
+                <div class="video-card">
+                    <div class="video-wrapper" data-video-id="udseIcrUxvA">
+                        <img src="https://img.youtube.com/vi/udseIcrUxvA/maxresdefault.jpg" alt="Soil Nutrients and Fertility">
+                    </div>
+                    <div class="video-info">
+                        <h3>Soil Nutrients and Fertility</h3>
+                        <p>Understanding essential nutrients and how to maintain optimal soil fertility.</p>
+                        <a href="https://www.youtube.com/watch?v=udseIcrUxvA" target="_blank" class="watch-on-youtube">Watch on YouTube →</a>
+                    </div>
+                </div>
+
+                <div class="video-card">
+                    <div class="video-wrapper" data-video-id="d8UF0_km2yc">
+                        <img src="https://img.youtube.com/vi/d8UF0_km2yc/maxresdefault.jpg" alt="Soil Biology and Ecosystems">
+                    </div>
+                    <div class="video-info">
+                        <h3>Soil Biology and Ecosystems</h3>
+                        <p>Explore the living organisms in soil and their role in ecosystem health.</p>
+                        <a href="https://www.youtube.com/watch?v=d8UF0_km2yc" target="_blank" class="watch-on-youtube">Watch on YouTube →</a>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
