--- a/soil-types.html
+++ b/soil-types.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="content-grid">
                 <div class="content-card">
-                    <img src="https://images.unsplash.com/photo-1595147389795-37094173bfd8?w=800&h=400&fit=crop&q=80" alt="Sandy Soil" class="content-card-img">
+                    <img src="Sandy-soil.jpg" alt="Sandy Soil" class="content-card-img">
                     <h3>Sandy Soil</h3>
                     <p><strong>Characteristics:</strong></p>
                     <ul>
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="content-card">
-                    <img src="https://images.unsplash.com/photo-1603048588665-791ca8aea617?w=800&h=400&fit=crop&q=80" alt="Clay Soil" class="content-card-img">
+                    <img src="clay-soil.jpg" alt="Clay Soil" class="content-card-img">
                     <h3>Clay Soil</h3>
                     <p><strong>Characteristics:</strong></p>
                     <ul>
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="content-card">
-                    <img src="https://images.unsplash.com/photo-1592982537447-7440770cbfc9?w=800&h=400&fit=crop&q=80" alt="Loam Soil" class="content-card-img">
+                    <img src="loam-soil.jpg" alt="Loam Soil" class="content-card-img">
                     <h3>Loam Soil</h3>
                     <p><strong>Characteristics:</strong></p>
                     <ul>
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="content-card">
-                    <img src="https://images.unsplash.com/photo-1585314062340-f1a5a7c9328d?w=800&h=400&fit=crop&q=80" alt="Silt Soil" class="content-card-img">
+                    <img src="silt-soil.jpg" alt="Silt Soil" class="content-card-img">
                     <h3>Silt Soil</h3>
                     <p><strong>Characteristics:</strong></p>
                     <ul>
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="content-card">
-                    <img src="https://images.unsplash.com/photo-1615671524827-c1fe3973b648?w=800&h=400&fit=crop&q=80" alt="Peat Soil" class="content-card-img">
+                    <img src="peat-soil.jpg" alt="Peat Soil" class="content-card-img">
                     <h3>Peat Soil</h3>
                     <p><strong>Characteristics:</strong></p>
                     <ul>
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="content-card">
-                    <img src="https://images.unsplash.com/photo-1509773896068-7fd415d91e2e?w=800&h=400&fit=crop&q=80" alt="Chalky Soil" class="content-card-img">
+                    <img src="chalk-soil.jpg" alt="Chalky Soil" class="content-card-img">
                     <h3>Chalky Soil</h3>
                     <p><strong>Characteristics:</strong></p>
                     <ul>
